IntroductionSection: Fixed alignment issues with carousel and text, enlarged cakepop on smaller devices

--- a/frontend/src/Components/Carousel/CarouselGallery.css
+++ b/frontend/src/Components/Carousel/CarouselGallery.css
@@ -137,6 +137,7 @@ html, body {
 @media (max-width: 1400px) {
   .swiper {
     height: auto;
+    width: 35%;
   }
 }
 
@@ -232,6 +233,7 @@ html, body {
     margin: auto;
     overflow-x: hidden;
     overflow: hidden;
+    align-items: center;
     
   }
 
