--- a/frontend/src/Components/IntroQuote/IntroQuote.css
+++ b/frontend/src/Components/IntroQuote/IntroQuote.css
@@ -88,7 +88,7 @@ h1.business-name {
   }
 
   .cake-pop {
-    width: 40px;
+    width: 70px;
   }
 }
 
@@ -113,7 +113,7 @@ h1.business-name {
     margin: 1.5rem 0 1.5rem;
   }
   .cake-pop {
-    width: 60px;
+    width: 70px;
   }
 }
 
